--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/d3": "^7.4.3",
+    "@vapi-ai/web": "^2.5.2",
     "d3": "^7.9.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
